Fix issue where aion_api Gradle script couldn't work without the aion's Gradle script as its root project.  Had to update the Aion deps also (old jars didn't export their modules)